--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+		http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	<!-- General description of your web application -->
 
 	<display-name>Spring MVC Skeleton</display-name>
@@ -31,9 +32,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 			<param-value>
-				/WEB-INF/security/*.xml
-      			<!--classpath:applicationContext-security.xml
-      			classpath:skeleton-servlet.xml-->
+				classpath:*.xml
+      			<!--classpath:skeleton-servlet.xml-->
     	</param-value>
 	</context-param>
 	
