--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'sonar-runner'
-apply plugin: 'jacoco'
+//apply plugin: 'jacoco'
 
 sourceCompatibility = 1.7
 version ='0.1'
@@ -18,6 +18,9 @@ dependencies {
     compile 'org.hibernate:hibernate-core:4.2.6.Final'
     compile 'commons-dbcp:commons-dbcp:1.4'
     compile 'org.hibernate:hibernate-ehcache:4.2.6.Final'
+    compile 'org.springframework.security:spring-security-web:3.2.0.RELEASE'
+	compile 'org.springframework.security:spring-security-core:3.2.0.RELEASE'
+	compile 'org.springframework.security:spring-security-config:3.2.0.RELEASE'
     runtime 'postgresql:postgresql:9.1-901.jdbc4'
     testCompile 'org.mockito:mockito-all:1.9.5'
     compile 'javax.servlet:jstl:1.2'
