--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     compile 'org.springframework:spring-orm:3.2.4.RELEASE'
     compile 'org.hibernate:hibernate-core:4.2.6.Final'
     compile 'commons-dbcp:commons-dbcp:1.4'
+    compile 'commons-beanutils:commons-beanutils:1.9.1'
+    compile 'commons-digester:commons-digester:2.1'
     compile 'org.hibernate:hibernate-ehcache:4.2.6.Final'
     compile 'org.springframework.security:spring-security-web:3.2.0.RELEASE'
 	compile 'org.springframework.security:spring-security-core:3.2.0.RELEASE'
@@ -27,6 +29,7 @@ dependencies {
     compile 'org.liquibase:liquibase-core:3.0.5'
     compile 'org.apache.tiles:tiles-extras:3.0.3'
     providedCompile 'org.apache.tomcat:tomcat-servlet-api:7.0.42'
+    
 }
 
 sonarRunner{
